Changed the folder structure to the exam template.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 target
 .idea
+tomcat.8080
+PVSExamSS2020RestAPI.iml
+src/main/java/de/fhws/fiw/pvs/exam/api/AuthTest.java
+src/main/java/de/fhws/fiw/pvs/exam/api/Test.java
